link coppy is done

--- a/src/Components/LeadsComponents/Restaurant/Restaurant.css
+++ b/src/Components/LeadsComponents/Restaurant/Restaurant.css
@@ -94,7 +94,7 @@
   border-radius: 100px;
   border: 1px solid #ea6a12;
   background: #fff;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 0 0 25px;
   position: relative;
   padding: 0 0 0 65px;
@@ -132,6 +132,41 @@
 
 .react-tel-input .form-control {
   width: 100%;
+}
+
+.copybtnbox{
+  display: inline-block;
+  vertical-align:middle;
+  position: relative;
+}
+
+.copybtnbox .copytooltip { 
+  position: absolute;
+  bottom: 25px;
+  /* padding-bottom: 10px; */
+  left: -46px;
+  width: 100px;
+  font-size: 12px;
+  /* height: 50px; */
+  color: white;
+}
+
+.copybtnbox .copytooltip:after {
+  content: "";
+  position: absolute;
+  top: 28px;
+  left: 50%;
+  width: 8px;
+  height: 8px;
+  border-style: solid;
+  border-color:  #ea6a12  transparent transparent transparent !important;;
+  /* border-color: #6c757d transparent transparent transparent; */
+  border-width: 8px;
+  margin-left: -4px;
+}
+
+.sharebtn{
+  display: inline-block;
 }
 
 
