--- a/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
+++ b/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
@@ -75,7 +75,21 @@ padding-bottom: 10px;
     width: auto;
 }
 
-/************** Arabic css  ****************/
+.hoverCopyed {
+    display: none !important; 
+}
+
+.copybtnbox:hover .hoverCopyed{ 
+        display: block !important; 
+}
+.hoverCopyed button{
+    background-color: #ea6a12 !important;
+}
+
+/* .tooltip[data-color=warning] .tooltip-inner {
+    background-color: #ffc107;
+    color: #000;
+  }************* Arabic css  ****************/ */
 
 .arabic  .submitbox .btn2.ms-3 {
     margin-left: 0 !important;
