--- a/src/Components/LeadsComponents/Leads/leads.css
+++ b/src/Components/LeadsComponents/Leads/leads.css
@@ -76,7 +76,7 @@
   width: 100%;
   height: 100%;
 }
-
+/* 
 .successpopup .innerpopup {
   background: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(17.920225143432617px);
@@ -101,7 +101,22 @@
   font-family: "NeuzeitGro-Reg";
   font-weight: normal;
 }
+.copybtnbox{
+  display: inline-block;
+  vertical-align:middle;
+  position: relative;
+}
 
+.copybtnbox .copytooltip { 
+  position: absolute;
+  top: 0;
+  left: 0;
+
+}
+
+.sharebtn{
+  display: inline-block;
+}
 .sharebtnbox {
   border-radius: 100px;
   border: 1px solid #ea6a12;
@@ -140,7 +155,7 @@
 
 .sharebtnbox .sharebtn {
   margin-left: 10px;
-}
+} */
 
 /* Arabic css */
 
