--- a/src/Authantication/Login/login.css
+++ b/src/Authantication/Login/login.css
@@ -25,8 +25,8 @@
     font-family: Playfair Display;
     font-size: 40px;
     font-style: normal;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 1.2;
     letter-spacing: 0.8px;
 }
@@ -36,8 +36,8 @@ font-weight: normal;
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.2;
     letter-spacing: 0.32px;
     margin-bottom: 16px;
@@ -55,8 +55,8 @@ font-weight: normal;
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     display: block;
     margin-bottom: 10px;
     line-height: 1;
@@ -113,16 +113,16 @@ font-weight: normal;
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.2;
 }
 
 .alreadytext {
     color: #07143B;
     font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     text-align: center;
     margin: 50px 0 0;
 }
@@ -143,7 +143,8 @@ font-weight: normal;
     font-size: 16px;
 
 }
-.forgortext span{
+
+.forgortext span {
     color: #EA6A12;
     font-size: 16px;
     text-decoration: none;
@@ -157,6 +158,7 @@ font-weight: normal;
 .passwordbox {
     position: relative;
 }
+
 .passwordbox input.form-control {
     padding-right: 40px;
 
@@ -169,6 +171,72 @@ font-weight: normal;
     z-index: 1;
     cursor: pointer;
 }
+
+.switchtogglebtn {}
+
+.switchtogglebtn .switch {
+    position: relative;
+    display: inline-block;
+    width: 56px;
+    height: 27px;
+    margin: 0 5px;
+}
+
+.switchtogglebtn .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.switchtogglebtn .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #EA6A12;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.switchtogglebtn .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #fff;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.switchtogglebtn input:checked+.slider {
+    /* background-color: #EA6A12; */
+}
+
+.switchtogglebtn input:focus+.slider {
+    box-shadow: 0 0 1px #EA6A12;
+}
+
+.switchtogglebtn input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.switchtogglebtn .slider.round {
+    border-radius: 34px;
+}
+
+.switchtogglebtn .slider.round:before {
+    border-radius: 50%;
+}
+
+
+
 
 .loginpage::-webkit-scrollbar,
 .login-box::-webkit-scrollbar {
@@ -183,10 +251,10 @@ font-weight: normal;
     background: linear-gradient(90.18deg, #8EC22C 2.36%, #379640 99.96%);
 }
 
-@media(max-width:767px){ 
+@media(max-width:767px) {
 
     .loginpage {
-        background: url(../../images/mobilebg.png) top center no-repeat ;
+        background: url(../../images/mobilebg.png) top center no-repeat;
         background-size: 100% 100vh;
         align-items: flex-end;
         padding-bottom: 120px;
@@ -199,12 +267,12 @@ font-weight: normal;
 }
 
 
-@media(max-width:580px){
+@media(max-width:580px) {
     .forgortext {
         display: block;
     }
 
-   
 
-    
+
+
 }
