--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -461,6 +461,9 @@
   margin: 0;
 }
 
+.bestseller-veg-non-veg >img{
+  margin-top: -2px !important;
+}
 .bestsellerpart > ul > li > .rightpart p {
   color: #8e8e8e;
   font-size: 12px;
