login directtion add

--- a/src/Components/DashboardComponents/PaymentHistory/paymenthistory.css
+++ b/src/Components/DashboardComponents/PaymentHistory/paymenthistory.css
@@ -50,7 +50,8 @@
     margin-bottom: 40px;
 }
 
-.paylist li {
+.paylist li { 
+    padding-top: 35px !important;
     width: 48%;
     border: 2px solid #F6F6F6;
     transition: all .3s ease;
