Lead and onboard.

--- a/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
+++ b/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
@@ -15,6 +15,9 @@
     right: 0;
     z-index: 2;
 }
+.react-tel-input .flag-dropdown {
+    z-index: -1;
+}
 
 .editprofilebanner {
     position: relative;
