--- a/src/Components/SubscriptionPage/subscription.css
+++ b/src/Components/SubscriptionPage/subscription.css
@@ -1,317 +1,330 @@
 .subscriptionpage {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    background: url(../../images/bg.png) top center no-repeat;
-    background-size: 100% 100%;
-    padding: 35px;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background: url(../../images/bg.png) top center no-repeat;
+  background-size: 100% 100%;
+  padding: 35px;
 }
 
-
-.subscriptionpage>.title {
-    text-align: center;
-    max-width: 700px;
-    margin: 0 auto;
+.subscriptionpage > .title {
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
-.subscriptionpage>.title h2 {
-    color: #000;
-    font-size: 56px;
-    font-style: normal;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 1.3;
-    letter-spacing: -1.12px;
-    text-align: center;
-    margin-bottom: 20px;
+.subscriptionpage > .title h2 {
+  color: #000;
+  font-size: 56px;
+  font-style: normal;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 1.3;
+  letter-spacing: -1.12px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.subscriptionpage>.title p {
-    color: #757575;
-    text-align: center;
-    font-size: 18px;
-    font-style: normal;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.5;
+.subscriptionpage > .title p {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1.5;
 }
 
 .subscriptiontabs {
-    margin: 40px 0;
+  margin: 40px 0;
 }
 
 .subscriptiontabs .nav {
-    justify-content: center;
-    padding: 12px 17px 12px 12px;
-    background-color: #fff;
-    max-width: 364px;
-    margin: 0 auto;
-    border-radius: 1000px;
-    align-items: center;
-    padding-left: 12px !important;
-    margin-bottom: 72px;
+  justify-content: center;
+  padding: 12px 17px 12px 12px;
+  background-color: #fff;
+  max-width: 364px;
+  margin: 0 auto;
+  border-radius: 1000px;
+  align-items: center;
+  padding-left: 12px !important;
+  margin-bottom: 72px;
 }
-
 
 .subscriptiontabs .nav .nav-link {
-    padding: 12px 32px;
-    color: #838E9E;
-    background: #fff;
-    border-radius: 170px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-
+  padding: 12px 32px;
+  color: #838e9e;
+  background: #fff;
+  border-radius: 170px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
 }
 
-.subscriptiontabs .nav .nav-item+.nav-item {
-    margin-left: 10px;
+.subscriptiontabs .nav .nav-item + .nav-item {
+  margin-left: 10px;
 }
 
 .subscriptiontabs .nav .nav-link.active {
-    background: #EA6A12;
-    color: #fff;
+  background: #ea6a12;
+  color: #fff;
 }
 
-
-.subscriptiontabs .tab-content>.tab-pane>ul {
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-
+.subscriptiontabs .tab-content > .tab-pane > ul {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
 }
 
-.subscriptiontabs .tab-content .tab-pane>ul>li {
-    background-color: #fff;
-    border: 1px solid #F5F6F7;
-    max-width: 470px;
-    position: relative;
-    border-radius: 20px;
+.subscriptiontabs .tab-content .tab-pane > ul > li {
+  background-color: #fff;
+  border: 1px solid #f5f6f7;
+  max-width: 470px;
+  position: relative;
+  border-radius: 20px;
 }
-.subscriptiontabs .tab-content .tab-pane>ul>li + li {
-    margin-left: 50px;
-}
-
-.subscriptiontabs .tab-content .tab-pane>ul>li>.title {
-    border-radius: 20px 20px 0 0;
+.subscriptiontabs .tab-content .tab-pane > ul > li + li {
+  margin-left: 50px;
 }
 
-.subscriptiontabs .tab-content .tab-pane>ul>li:hover>.title,
-.subscriptiontabs .tab-content .tab-pane>ul>li.active>.title,
-.subscriptiontabs .tab-content .tab-pane>ul>li.basic>.title {
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content .tab-pane > ul > li > .title {
+  border-radius: 20px 20px 0 0;
 }
 
-.subscriptiontabs .tab-content .tab-pane>ul>li .rebtn {
-    position: absolute;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    background: #EA6A12;
-    padding: 9px 16px;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    top: -39px;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    border-radius: 12px 12px 0 0;
+.subscriptiontabs .tab-content .tab-pane > ul > li:hover > .title,
+.subscriptiontabs .tab-content .tab-pane > ul > li.active > .title,
+.subscriptiontabs .tab-content .tab-pane > ul > li.basic > .title {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-
-.subscriptiontabs .tab-content ul>li>.title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px;
-    overflow: hidden;
-    position: relative;
+.subscriptiontabs .tab-content .tab-pane > ul > li .rebtn {
+  position: absolute;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: #ea6a12;
+  padding: 9px 16px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  top: -39px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  border-radius: 12px 12px 0 0;
 }
 
-.subscriptiontabs .tab-content ul>li>.title::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-    border-top: 4px solid #000;
+.subscriptiontabs .tab-content ul > li > .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  overflow: hidden;
+  position: relative;
+}
+
+.subscriptiontabs .tab-content ul > li > .title::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border-top: 4px solid #000;
 }
 
 .subscriptiontabs .tab-content ul > li > .title > .iconbox {
-    width: 80px;
-    height: 80px;
-    border-radius: 8px;
-    background-color: #F5F5F5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  width: 80px;
+  height: 80px;
+  border-radius: 8px;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li:hover>.title>.iconbox .img,
-.subscriptiontabs .tab-content ul>li>.title>.iconbox .activeimg {
-    display: none;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li:hover > .title > .iconbox .img,
+.subscriptiontabs .tab-content ul > li > .title > .iconbox .activeimg {
+  display: none;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li:hover>.title::after,
-.subscriptiontabs .tab-content ul>li.basic>.title::after {
-    border-top: 4px solid #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li:hover > .title::after,
+.subscriptiontabs .tab-content ul > li.basic > .title::after {
+  border-top: 4px solid #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .subscriptiontabs .tab-content ul > li.basic > .title > .iconbox .activeimg {
-    display: none;
+  display: none;
 }
 
-.subscriptiontabs .tab-content ul>li:hover>.title>.iconbox .activeimg  ,
-.subscriptiontabs .tab-content .tab-pane>ul>li.basic title>.iconbox .activeimg {
-    display: block;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li:hover > .title > .iconbox .activeimg,
+.subscriptiontabs
+  .tab-content
+  .tab-pane
+  > ul
+  > li.basic
+  title
+  > .iconbox
+  .activeimg {
+  display: block;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .subscriptiontabs .tab-content ul > li.basic > .title > .iconbox .img {
-    display: none;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  display: none;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .subscriptiontabs .tab-content ul > li:hover > .title > .iconbox,
 .subscriptiontabs .tab-content ul > li.basic > .title > .iconbox {
-    background-color: #F0F5FF;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  background-color: #f0f5ff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .subscriptiontabs .tab-content ul > li.basic > .title > .iconbox .activeimg {
-    display: block;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  display: block;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li>.title>h3 {
-    color: #000;
-    font-size: 34px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 1.3;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li > .title > h3 {
+  color: #000;
+  font-size: 34px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 1.3;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li>.title>h3>span {
-    color: #42526B;
-    font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+.subscriptiontabs .tab-content ul > li > .title > h3 > span {
+  color: #42526b;
+  font-size: 16px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
 }
 
-.subscriptiontabs .tab-content ul>li:hover > .title>h3,
-.subscriptiontabs .tab-content ul>li.basic > .title > h3 {
-    color: #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li:hover > .title > h3,
+.subscriptiontabs .tab-content ul > li.basic > .title > h3 {
+  color: #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li .info {
-    padding: 0 30px 40px;
-    border-bottom: 1px solid #E6E8EC;
-    margin-bottom: 0;
+.subscriptiontabs .tab-content ul > li .info {
+  padding: 0 30px 40px;
+  border-bottom: 1px solid #e6e8ec;
+  margin-bottom: 0;
 }
 
-.subscriptiontabs .tab-content ul>li .info h4 {
-    color: #000;
-    font-size: 24px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 1.3;
-    margin-bottom: 10px;
+.subscriptiontabs .tab-content ul > li .info h4 {
+  color: #000;
+  font-size: 24px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 1.3;
+  margin-bottom: 10px;
 }
 
-.subscriptiontabs .tab-content ul>li .info p {
-    color: #42526B;
-    font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.3;
-    margin-bottom: 32px;
+.subscriptiontabs .tab-content ul > li .info p {
+  color: #42526b;
+  font-size: 16px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1.3;
+  margin-bottom: 32px;
 }
 
-.subscriptiontabs .tab-content ul>li .info button {
-    background-color: transparent;
-    display: inline-flex;
-    padding: 0px 32px;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    border-radius: 7px;
-    color: #000;
-    border: 1px solid #000;
-    height: 48px;
-    cursor: pointer;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li .info button {
+  background-color: transparent;
+  display: inline-flex;
+  padding: 0px 32px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border-radius: 7px;
+  color: #000;
+  border: 1px solid #000;
+  height: 48px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li .info button svg {
-    stroke: black;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li .info button svg {
+  stroke: black;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li:hover .info button,
-.subscriptiontabs .tab-content .tab-pane>ul>li.basic .info button {
-    border: 1px solid #EA6A12;
-    background-color: #EA6A12;
-    color: #fff;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li:hover .info button,
+.subscriptiontabs .tab-content .tab-pane > ul > li.basic .info button {
+  border: 1px solid #ea6a12;
+  background-color: #ea6a12;
+  color: #fff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li:hover .info button svg,
-.subscriptiontabs .tab-content .tab-pane>ul>li.basic .info button svg {
-    stroke: #fff;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li:hover .info button svg,
+.subscriptiontabs .tab-content .tab-pane > ul > li.basic .info button svg {
+  stroke: #fff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li .infolist {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 30px;
-    padding-left: 30px !important;
+.subscriptiontabs .tab-content ul > li .infolist {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 30px;
+  padding-left: 30px !important;
 }
 
-.subscriptiontabs .tab-content ul>li .infolist>li+li {
-    margin-top: 20px;
+.subscriptiontabs .tab-content ul > li .infolist > li + li {
+  margin-top: 20px;
 }
 
-.subscriptiontabs .tab-content ul>li .infolist>li span {
-    color: #42526B;
-    font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.3;
-    margin-left: 12px;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li .infolist > li span {
+  color: #42526b;
+  font-size: 16px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1.3;
+  margin-left: 12px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li .infolist>li.disable {
-    opacity: .3;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.subscriptiontabs .tab-content ul > li .infolist > li.disable {
+  opacity: 0.3;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.subscriptiontabs .tab-content ul>li .infolist>li.disable  span {
-    text-decoration: line-through;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-} 
+.subscriptiontabs .tab-content ul > li .infolist > li.disable span {
+  text-decoration: line-through;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+
+/********** Subscription css ****************/
+
+.arabic .subscriptiontabs .tab-content .tab-pane>ul>li + li {
+    margin-left: 0;
+    margin-right: 50px;
+}
+
+
+
+
