Added logo, edit profile, logout button on navbar.

--- a/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
+++ b/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
@@ -117,7 +117,10 @@ letter-spacing: 0.26px;
     background-color: #EA6A12;
 }
 
+.dropdownoptbox button{
+    /* border-bottom: 1px solid #EA6A12 !important; */
 
+}
 
 header .rightpart .user {
     display: flex;
@@ -140,6 +143,7 @@ header .rightpart .user .userinfo {
 header .rightpart .user figure>img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 header .rightpart .user h3 {
@@ -182,7 +186,7 @@ header .rightpart .user p {
     width: 102px;
     border-radius: 2px;
     background: #FFEEE7;
-    padding: 5px 10px;
+    padding: 10px 10px;
     z-index: 9999999;
 }
 
